--- a/AdvancedStateAndSideEffectsCodelab/app/build.gradle
+++ b/AdvancedStateAndSideEffectsCodelab/app/build.gradle
@@ -123,6 +123,10 @@ dependencies {
     def lifecycle_version = "2.10.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+    // collectAsStateWithLifecycle()
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_version"
+
     implementation "com.google.dagger:hilt-android:2.57.2"
     kapt "com.google.dagger:hilt-compiler:2.57.2"
 
